<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/please_select_time"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/st"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/sun"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sun"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/mon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/mon"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tue"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/wed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/wed"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/thu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/thu"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/fri"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fri"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/save"
                android:layout_margin="20dp"
                android:text="@string/Save"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/cance"
                android:layout_margin="20dp"
                android:text="@string/Cancel"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>